--- a/clippingDetector.ipynb
+++ b/clippingDetector.ipynb
@@ -13,7 +13,11 @@
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from PIL import Image\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import rawpy\n",
+    "\n",
+    "rawExtensions = ('.nef', 'nrw', '.crw', '.cr2', 'cr3','arw')\n",
+    "jpegExtensions = ('.jpg','.jpeg')"
    ]
   },
   {
@@ -27,15 +31,30 @@
     "files = [f for f in os.listdir(mypath) if os.path.isfile(os.path.join(mypath, f))]\n",
     "results = {}\n",
     "for file in tqdm(files):\n",
-    "    gray = cv2.imread(os.path.join(mypath, file), cv2.IMREAD_GRAYSCALE)\n",
-    "    dimensions = gray.shape\n",
-    "    size = dimensions[0]*dimensions[1]\n",
-    "    ret,white = cv2.threshold(gray,254,255,0)\n",
-    "    ret,black = cv2.threshold(gray,1,255,0)\n",
-    "    wClip = np.count_nonzero(white)/size\n",
-    "    bClip = np.count_nonzero(black==0)/size\n",
-    "    avg = np.average(gray)\n",
-    "    results[file] = {'w':wClip,'b':bClip, 'average':avg}\n",
+    "    fileName = os.path.join(mypath, file)\n",
+    "    if(fileName.lower().endswith(rawExtensions)):\n",
+    "        raw = True\n",
+    "    elif(fileName.lower().endswith(jpegExtensions)):\n",
+    "        raw = False\n",
+    "    else:\n",
+    "        raw = None\n",
+    "    if(raw is not None):\n",
+    "        if(raw==True):\n",
+    "            raw = rawpy.imread(fileName)\n",
+    "            rgb = raw.postprocess()\n",
+    "            img = Image.fromarray(rgb)\n",
+    "            color = cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR)\n",
+    "            gray = cv2.cvtColor(color, cv2.COLOR_BGR2GRAY)\n",
+    "        elif (raw==False):\n",
+    "            gray = cv2.imread(fileName, cv2.IMREAD_GRAYSCALE)\n",
+    "        dimensions = gray.shape\n",
+    "        size = dimensions[0]*dimensions[1]\n",
+    "        ret,white = cv2.threshold(gray,254,255,0)\n",
+    "        ret,black = cv2.threshold(gray,1,255,0)\n",
+    "        wClip = np.count_nonzero(white)/size\n",
+    "        bClip = np.count_nonzero(black==0)/size\n",
+    "        avg = np.average(gray)\n",
+    "        results[file] = {'w':wClip,'b':bClip, 'average':avg}\n",
     "df = pd.DataFrame.from_dict(results, orient='index')\n",
     "df.to_csv('reuslts.csv')"
    ]
